<resources>
    <string name="app_name">Sales Order</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sales Order</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="barang">Barang</string>
    <string name="stock">Stock</string>
    <string name="harga">Harga</string>
    <string name="satuan">Satuan</string>
    <string name="qty">Qty</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="cancel">cancel</string>
    <string name="title_activity_map">Daftar Order Map</string>
    <string name="title_activity_pelanggan">Daftar Pelanggan</string>
    <string name="title_activity_list_order">Daftar Order</string>
    <string name="logout">Logout</string>
    <string name="text_logo">Android Tutorials Hub</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_login">Login</string>
</resources>
